# django-core-app

./: .gitignore  MANIFEST.in  PyPi-Package-Note.Md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  stractures.md
core/Views/: language_test.py
core/context_processors/: __init__.py  jwt_token.py  sidebar_color.py
core/management/commands/: appmigrations.py  newapi.py  newapp.py  setup.py  staffuser.py  superuser.py
core/models/: address_model.py  time_stamped.py
core/templatetags/: nav_active.py
core/utils/: field_error_messages.py  generator.py
