[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rakib-django-core"
version = "0.1.1"
authors = [
    {name = "Md. Rakib Hassan", email = "rakib1515hassan@gmail.com"},
]
description = "This is a Django-based web application for managing core functionalities."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
]
dependencies = [
    "Django>=3.2",
]

[project.urls]
Homepage = "https://github.com/rakib1515hassan/django-core-app"